--- a/app/src/main/res/layout/item_author.xml
+++ b/app/src/main/res/layout/item_author.xml
@@ -6,8 +6,8 @@
     android:gravity="center_vertical">
 
     <ImageView
-        android:id="@+id/iv_head"
         android:scaleType="centerCrop"
+        android:id="@+id/iv_head"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@mipmap/ic_launch" />
@@ -49,7 +49,8 @@
         android:layout_marginBottom="@dimen/dp10"
         android:layout_marginLeft="@dimen/dp8"
         android:layout_toEndOf="@+id/ll_sex_age"
-        android:text="会飞的鱼"
+        android:text=""
+        android:singleLine="true"
         android:textColor="@color/whitecc"
         android:textSize="@dimen/sp12" />
 </RelativeLayout>
