--- a/app/src/main/res/layout/activity_editing_materials.xml
+++ b/app/src/main/res/layout/activity_editing_materials.xml
@@ -275,6 +275,7 @@
             android:layout_marginRight="@dimen/dp15"
             android:layout_weight="1"
             android:background="@null"
+            android:maxLength="40"
             android:gravity="right|center_vertical"
             android:hint="请填写自己的一句话签名"
             android:textColor="@color/textColor"
