--- a/app/src/main/res/layout/dialog_takephoto.xml
+++ b/app/src/main/res/layout/dialog_takephoto.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:orientation="vertical">
 
     <LinearLayout
@@ -17,7 +16,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="照相"
+            android:text="相机"
             android:textColor="@color/textColor"
             android:textSize="15sp" />
 
